--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </a>
     </div>
   </div>
-  <script>
+  <script
     src="//code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
     crossorigin="anonymous"></script><script src="js/scripts.js"></script>
