--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
   <div class='resume_projects'>
     <div class='resume'>
-      <a href='/files/JackLundquist_Resume.pdf'>
+      <a href='https://jack-lundquist.github.io/portfolio/files/JackLundquist_Resume.pdf'>
         resume
       </a>
     </div>
     <div class='projects'>
-      <a href='/projects.html'>
+      <a href='https://jack-lundquist.github.io/portfolio/projects.html'>
         projects + research
       </a>
     </div>
