adding links to work

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
     </h3>
     <ul>
       <li><a href='https://jack-lundquist.github.io/devoppidx/'>Affordable Housing Development Opportunity Index</a></li>
-      <li>Assessing Racial Discrimination in Traffic Stops Across Texas (Report to Come)</li>
+      <li><a href='https://github.com/jkastelan/DAA2018_jlk635'>Assessing Racial Discrimination in Traffic Stops Across Texas (Report to Come)</a></li>
       <li>Extracting Rideshare Data from NYC TLC Data + Market Share Analysis (Report to Come)</li>
       <li>GLITTER: Gowanus Low Impact Tranport Tracking + Emissions Reporting (Work in Progress)</li>
     </ul>
