--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,8 @@
     <ul>
       <li><a href='https://jack-lundquist.github.io/devoppidx/'>Affordable Housing Development Opportunity Index</a></li>
       <li><a href='https://github.com/jkastelan/DAA2018_jlk635'>Assessing Racial Discrimination in Traffic Stops Across Texas (Report to Come)</a></li>
-      <li><a href='https://medium.com/data-tale/is-uber-taking-over-new-york-city-faf9e03d4c34'>Is Uber Taking Over New York City? Using individual trip-level data to answer important questions on ride sharing services’ influence on markets, drivers, and citizens</a></li>
+      <li style=><a href='https://medium.com/data-tale/is-uber-taking-over-new-york-city-faf9e03d4c34'>Is Uber Taking Over New York City? Using individual trip-level data to answer important questions on ride sharing services’ 
+      influence</a></li>
       <li>GLITTER: Gowanus Low Impact Tranport Tracking + Emissions Reporting (Work in Progress)</li>
     </ul>
 
