updating links and some text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </a>
     </div>
     <div class='projects'>
-      <a href='https://jack-lundquist.github.io/portfolio/projects.html'>
+      <a href='projects.html'>
         projects + research
       </a>
     </div>
