updated resume, job title, adding new projects

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
     </h3>
     <ul>
       <li><a href='https://jack-lundquist.github.io/devoppidx/'>Affordable Housing Development Opportunity Index</a></li>
-      <li><a href='https://fairtrafficstopstexas.github.io/racialProfilingTexas/'>Assessing Racial Discrimination in Traffic Stops Across Texas (Report to Come)</a></li>
+      <li><a href='https://fairtrafficstopstexas.github.io/racialProfilingTexas/'>Assessing Racial Discrimination in Traffic Stops Across Texas</a></li>
       <li style=><a href='https://medium.com/data-tale/is-uber-taking-over-new-york-city-faf9e03d4c34'>Is Uber Taking Over New York City? (Founding Contributor, data.tale)</a></li>
       <li>GLITTER: Gowanus Low Impact Tranport Tracking + Emissions Reporting (Work in Progress)</li>
     </ul>
