--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
 <div class='adjusted_text'>
   <div class='bio'>
-    M.S. Candidate, NYU Center for Urban Science + Progress <br>
-    Researcher, Urban Intelligence Lab <br> <br>
+    Intern: Executive Research Department, NYS Office of the Attorney General
+    <br>
+    Researcher, Urban Intelligence Lab <br>
+    M.S. Candidate, NYU Center for Urban Science + Progress <br><br>
   </div>
 
 
