adding current contact info and work done

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
   <div class='footer'>
     <div class='email'>
-      <a href="mailto:jack.lundquist@nyu.edu">
+      <a href="mailto:jacklundquist95@gmail.com">
       Contact
     </div>
     <div class='github'>
