--- a/projects.html
+++ b/projects.html
@@ -27,20 +27,20 @@
       Research: <a href='http://www.urbanintelligencelab.org/'> Urban Intelligence Lab </a>
     </h3>
     <ul>
-      <li>Residential Water Consumption in NYC (Research in Progress)</li>
+      <li>Population Estimation Using Water Consumption Data</li>
       <li><a style='text-align: left;' href='http://www.tandfonline.com/doi/abs/10.1080/15228835.2017.1418703'>
         Applications of Machine Learning Methods to Predict Readmission and Length-of-Stay for Homeless Families (Journal of Technology in Human Services, 2018)
       </a></li>
     </ul>
 
     <h3>
-      Project Work: NYU Center for Urban Science + Progress
+      Project Work: <a href='http://cusp.nyu.edu/students/jack-lundquist-ms-class-of-2018/'>NYU Center for Urban Science + Progress</a>
     </h3>
     <ul>
+      <li><a href='https://cuspcapstones.github.io/Piercing-the-Corporate-Landlord-Veil_2018/index.html'>Digital Traces of the Predatory Landlord</a></li>
       <li><a href='https://jack-lundquist.github.io/devoppidx/'>Affordable Housing Development Opportunity Index</a></li>
       <li><a href='https://fairtrafficstopstexas.github.io/racialProfilingTexas/'>Assessing Racial Discrimination in Traffic Stops Across Texas</a></li>
       <li style=><a href='https://medium.com/data-tale/is-uber-taking-over-new-york-city-faf9e03d4c34'>Is Uber Taking Over New York City? (Founding Contributor, data.tale)</a></li>
-      <li>GLITTER: Gowanus Low Impact Tranport Tracking + Emissions Reporting (Work in Progress)</li>
     </ul>
 
 
