--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 
 <div class='adjusted_text'>
   <div class='bio'>
-    Intern: Executive Research Department, NYS Office of the Attorney General
-    <br>
-    Researcher, Urban Intelligence Lab <br>
-    M.S. Candidate, NYU Center for Urban Science + Progress <br><br>
+    <b>Current:</b> Research Scientist, <a href = 'https://city.systems/'>City Systems</a>
+    <br><br>
+    <b>Past:</b> NYS Office of the Attorney General, <a href='http://www.urbanintelligencelab.org/'>
+      Urban Intelligence Lab</a>,<br>
+     <a href='http://cusp.nyu.edu/'>NYU CUSP</a>, <a href='http://sus.stanford.edu/'>  Stanford's Sustainable Urban Systems Initiative</a><br><br><br>
   </div>
 
 
