index formatting updates

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 <div class='adjusted_text'>
   <div class='bio'>
-    <b>Current</b><br> Policy Analyst, HPD <br> Research and Media Volunteer, Housing Justice for All and BK DSA Housing Working Group
+    <b>Current:</b> Policy Analyst, HPD; Research and Media Volunteer, Housing Justice for All and BK DSA Housing Working Group
     <br><br>
-    <b>Past</b> <br>  <a href = 'https://city.systems/'>City Systems, </a> NYS Office of the Attorney General, <a href='http://www.urbanintelligencelab.org/'>
+    <b>Past:</b>  <a href = 'https://city.systems/'>City Systems, </a> NYS Office of the Attorney General, <a href='http://www.urbanintelligencelab.org/'>
       Urban Intelligence Lab</a>,<br>
      <a href='http://cusp.nyu.edu/'>NYU CUSP</a>, <a href='http://sus.stanford.edu/'>  Stanford's Sustainable Urban Systems Initiative</a><br><br><br>
   </div>
