added projects/updated links

--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,8 @@
   </div>
 
   <div class='list'>
+    <h3> <a href='https://drive.google.com/file/d/1M9Dp_bCITTaW5pDJ6WORqTsEOq6jjD55/view?usp=sharing'>DSA Report: The Corrupting Influence of Real Estate in Albany</a>
+    </h3>
     <h3>
       Research: <a href='http://www.urbanintelligencelab.org/'> Urban Intelligence Lab </a>
     </h3>
@@ -39,7 +41,7 @@
     <ul>
       <li><a href='https://cuspcapstones.github.io/Piercing-the-Corporate-Landlord-Veil_2018/index.html'>Digital Traces of the Predatory Landlord</a></li>
       <li><a href='https://jack-lundquist.github.io/devoppidx/'>Affordable Housing Development Opportunity Index</a></li>
-      <li><a href='https://fairtrafficstopstexas.github.io/racialProfilingTexas/'>Assessing Racial Discrimination in Traffic Stops Across Texas</a></li>
+      <li><a href='https://jack-lundquist.github.io/texasDPS-discrimination-analysis/'>Assessing Racial Discrimination in Traffic Stops Across Texas</a></li>
       <li style=><a href='https://medium.com/data-tale/is-uber-taking-over-new-york-city-faf9e03d4c34'>Is Uber Taking Over New York City? (Founding Contributor, data.tale)</a></li>
     </ul>
 
@@ -49,13 +51,13 @@
     </h3>
     <ul>
       <li><a href='http://sus.stanford.edu/sanjose/'> San Jose's Urban Future </a>
-      (Involved as Student, Research and Teaching Assistant)</li>
+      </li>
       <li><a href='http://sus.stanford.edu/sdg/'> Localizing the Sustainable Development Goals </a>
-      (Involved as Research and Teaching Assistant)</li>
+      </li>
       <li><a href='http://sus.stanford.edu/stockton/'> Revitalizing South Stockton </a>
-      (Involved as Teaching Assistant)</li>
+      </li>
       <li><a href='http://sus.stanford.edu/mobility/'> Mobility in the South Bay Area </a>
-      (Involved as Teaching Assistant)</li>
+      </li>
     </ul>
   </div>
   <div class='footer'>
