--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
   </div>
   <div class='footer'>
     <div class='email'>
-      <a href="mailto:jack.lundquist@nyu.edu">
+      <a href="mailto:jacklundquist95@gmail.com">
       Contact
     </div>
     <div class='github'>
