--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class='adjusted_text'>
   <div class='bio'>
-    <b>Current:</b> Policy Analyst, HPD; Research and Media Volunteer, Housing Justice for All and the NYC Democratic Socialists of America
+    <b>Current:</b> Policy Analyst, HPD; Research and Media Volunteer, Housing Justice for All
     <br><br>
     <b>Past:</b>  <a href = 'https://city.systems/'>City Systems, </a> NYS Office of the Attorney General, <a href='http://www.urbanintelligencelab.org/'>
       Urban Intelligence Lab</a>,<br>
