Updating resume, updating current work

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 <div class='adjusted_text'>
   <div class='bio'>
-    <b>Current:</b> Policy Analyst, HPD; Research and Media Volunteer, Housing Justice for All
+    <b>Current:</b> Senior Policy Analyst, HPD;
     <br><br>
-    <b>Past:</b>  <a href = 'https://city.systems/'>City Systems, </a> NYS Office of the Attorney General, <a href='http://www.urbanintelligencelab.org/'>
+    <b>Past:</b>Housing Justice for All, <a href = 'https://city.systems/'>City Systems, </a> NYS Office of the Attorney General, <a href='http://www.urbanintelligencelab.org/'>
       Urban Intelligence Lab</a>,<br>
      <a href='http://cusp.nyu.edu/'>NYU CUSP</a>, <a href='http://sus.stanford.edu/'>  Stanford's Sustainable Urban Systems Initiative</a><br><br><br>
   </div>
