--- a/projects.html
+++ b/projects.html
@@ -23,8 +23,6 @@
   </div>
 
   <div class='list'>
-    <h3> <a href='https://drive.google.com/file/d/1M9Dp_bCITTaW5pDJ6WORqTsEOq6jjD55/view?usp=sharing'>DSA Report: The Corrupting Influence of Real Estate in Albany</a>
-    </h3>
     <h3>
       Research: <a href='http://www.urbanintelligencelab.org/'> Urban Intelligence Lab </a>
     </h3>
@@ -47,7 +45,7 @@
 
 
     <h3>
-      Project Work: <a href='http://sus.stanford.edu/'> Stanford Sustainable Urban Systems </a>
+      Project Work: <a href='http://sus.stanford.edu/'> Stanford Future Bay Initiative </a>
     </h3>
     <ul>
       <li><a href='http://sus.stanford.edu/sanjose/'> San Jose's Urban Future </a>
