--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
 <div class='adjusted_text'>
   <div class='bio'>
-    <b>Current:</b> Senior Policy Analyst, HPD;
+    <b>Current:</b> Senior Policy Analyst, HPD
     <br><br>
-    <b>Past:</b>Housing Justice for All, <a href = 'https://city.systems/'>City Systems, </a> NYS Office of the Attorney General, <a href='http://www.urbanintelligencelab.org/'>
-      Urban Intelligence Lab</a>,<br>
-     <a href='http://cusp.nyu.edu/'>NYU CUSP</a>, <a href='http://sus.stanford.edu/'>  Stanford's Sustainable Urban Systems Initiative</a><br><br><br>
+    <b>Past:</b> Housing Justice for All, <a href = 'https://city.systems/'>City Systems, </a> NYS Office of the Attorney General, <a href='http://www.urbanintelligencelab.org/'>
+      Urban Intelligence Lab</a>,
+     <a href='http://cusp.nyu.edu/'>NYU CUSP</a>, <br> <a href='http://sus.stanford.edu/'>  Stanford's Future Bay Initiative</a><br><br><br>
   </div>
 
 
