--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class='adjusted_text'>
   <div class='bio'>
     <b>Current:</b> Senior Policy Analyst, HPD
-    <br>Housing Justice for All (Volunteer)<br><br>
+    <br><a href='https://housingjusticeforall.org/'>Housing Justice for All (Volunteer)</a><br><br>
     <b>Past:</b> <a href = 'https://city.systems/'>City Systems, </a> NYS Office of the Attorney General, <a href='http://www.urbanintelligencelab.org/'>
       Urban Intelligence Lab</a>,
      <a href='http://cusp.nyu.edu/'>NYU CUSP</a>, <br> <a href='http://sus.stanford.edu/'>  Stanford's Future Bay Initiative</a><br><br><br>
